add selfie image and bio description to main page + clean up css

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,17 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Areeta Wong's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Areeta Wong</h1>
+      <p>Hi! I'm an incoming 3rd year at University of California, Irvine studying computer science and minoring
+          in Informatics, interested in technology and product management. Outside of school, I enjoy guiding 
+          students (especially females) into the world of tech through hackathons, clubs, and a mailing list 
+          for focused on high school. Currently, I'm a Google STEP Intern on the Google Ads team.
+      </p>
+      <a href="http://twitter.com/areetaw" class="fa fa-twitter"></a>
+      <img src="images/google.jpg" width="330">
       <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <button onclick="addRandomFact()">Click Here to Get a Random Fact</button>
+      <div id="fact-container"></div>
     </div>
   </body>
 </html>
