--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,6 +18,7 @@
     </head>
     <body>
         <section id="about">
+            <img src="images/google.jpg" alt="photo of areeta">
             <h1 class="text-uppercase">Areeta Wong</h1>
             <p>Hi! I'm an incoming 3rd year at University of California, Irvine studying computer science and minoring
             in Informatics, interested in technology and product management. Outside of school, I enjoy guiding 
@@ -32,16 +33,27 @@
         </section>
         <section id="projects">
             <h2 class="text-uppercase">Projects</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia deserunt mollit anim id est laborum.
+            </p>
         </section>
         <section id="images">
-
         </section>
-        <section id="leadership">
-            <h2 class="text-uppercase">Leadership</h2>
-
+        <section id="hobbies">
+            <h2 class="text-uppercase">hobbies</h2>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia deserunt mollit anim id est laborum.
+            </p>
         </section>
         <button onclick="addRandomFact()">Click Here to Get a Random Fact</button>
         <div id="fact-container"></div>
-        </div>
     </body>
 </html>
