--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,59 +1,106 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- meta tags -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="Areeta Wong's Personal Website">
+		<meta name="keywords" content="Areeta, areetaw, areetawong">
+
+		<!-- bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         
-        <!-- style -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <!-- js -->
-        <script src="script.js"></script>
-
+		<!-- fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300&display=swap" rel="stylesheet">
+		
+		<!-- icon library -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Areeta Wong</title>
     </head>
     <body>
-        <section id="about">
-            <img src="images/google.jpg" alt="photo of areeta">
-            <h1 class="text-uppercase">Areeta Wong</h1>
-            <p>Hi! I'm an incoming 3rd year at University of California, Irvine studying computer science and minoring
-            in Informatics, interested in technology and product management. Outside of school, I enjoy guiding 
-            students (especially females) into the world of tech through hackathons, clubs, and a mailing list 
-            for focused on high school. Currently, I'm a Google STEP Intern on the Google Ads team.
-            </p>
-            <div class="socials" style="flex-direction: row; text-align: center;">
-                <a href="http://twitter.com/areetaw" class="fa fa-twitter"></a>
-                <a href="https://github.com/areetaw" class="fa fa-github"></a>
-                <a href="https://www.linkedin.com/in/areetaw" class="fa fa-linkedin"></a>
-            </div>
+        <!-- navigation bar -->
+		  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNav">
+			<div class="container">
+			  <a class="navbar-brand js-scroll-trigger" href="#header">Areeta Wong</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+				  <li class="nav-item">
+					<a class="nav-link js-scroll-trigger" href="#about">about me</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link js-scroll-trigger" href="#projects">projects</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
+
+        <!-- about me -->
+		<section id="about">
+			<div class="jumbotron text-left" style="color: #000000;">
+				<div class="mx-5 mx-xl-5">
+					<h2>about me</h2>
+					<p>
+						Hi! I'm an incoming 3rd year at <a class="link" href="https://uci.edu/">University of
+						California, Irvine</a> studying computer science with a minor in Informatics, interested in technology
+						and product management. Outside of school, I enjoy guiding students (especially
+						females) into the world of tech through hackathons, clubs, and a mailing list for focused on
+						high school students. Although born and raised in San Francisco, my interest in tech didn't start
+						until my summer at TwitterSF with Girls Who Code. 
+					</p>
+				</div>
+                <div class="socials" style="flex-direction: row; text-align: center;">
+                    <a href="http://twitter.com/areetaw" class="fa fa-twitter"></a>
+                    <a href="https://github.com/areetaw" class="fa fa-github"></a>
+                    <a href="https://www.linkedin.com/in/areetaw" class="fa fa-linkedin"></a>
+                </div>
+			</div>
+		</section>
+
+        <!-- projects -->
+		<section id="projects" style="background-color: #898CAE; color: #FFFFFF;"
+			<div class="jumbotron text-left" >
+				<div class="mx-5 mx-xl-5">
+					<h2>projects</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+				</div>
+			</div>
         </section>
-        <section id="projects">
-            <h2 class="text-uppercase">Projects</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-        </section>
+
+        <!-- images -->
         <section id="images">
         </section>
+
+        <!-- hobbies -->
         <section id="hobbies">
-            <h2 class="text-uppercase">hobbies</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+			<div class="jumbotron text-left" style="color: #000000;">
+				<div class="mx-5 mx-xl-5">
+					<h2>hobbies</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+				</div>
+			</div>
         </section>
-        <button onclick="addRandomFact()">Click Here to Get a Random Fact</button>
-        <div id="fact-container"></div>
     </body>
 </html>
