add more text to about me

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -51,13 +51,25 @@
 				<div class="mx-5 mx-xl-5">
 					<h2>about me</h2>
 					<p>
-						Hi! I'm an incoming 3rd year at <a class="link" href="https://uci.edu/">University of
+						Hi! I'm Areeta and I'm an incoming 3rd year at <a class="link" href="https://uci.edu/">University of
 						California, Irvine</a> studying computer science with a minor in Informatics, interested in technology
-						and product management. Outside of school, I enjoy guiding students (especially
-						females) into the world of tech through hackathons, clubs, and a mailing list for focused on
-						high school students. Although born and raised in San Francisco, my interest in tech didn't start
-						until my summer at TwitterSF with Girls Who Code. 
+						and product management. Although born and raised in San Francisco and Foster City, my interest in tech didn't start
+						until my summer at Twitter with <a class="link" href="https://girlswhocode.com/">Girls Who Code
+						</a> in the summer of 2016; it was the first time I ever saw, wrote, and understood code. Since then,
+                        I've been jumping on opportunities to pay it forward and help computer science education be
+                        more accessible to students through organizing hackathons, hosting workshops, and leading organizations.
 					</p>
+                    <p>
+                        Outside of CS, one of my favorite things to do is eat! From sashimi from the Japan's famous Tsukiji fish market to 
+                        Southern California's homemade Omomo boba, my taste buds want to experience it all. Since I can remember, I have
+                        been a big fan of food; it always brought people together (often those of different cultures) and made people happy and full.
+                        A fun fact about me is that in Winter Quarter of 2020, I drank boba at least 4 times a week; Irvine, CA has over 15 locations for boba
+                        so it is quite hard to not drink boba.
+                    </p>
+                    <p>
+                        Currently, I'm a Student Training in Engineering Program (STEP) Intern, formerly known as Engineering Practicum, at Google working
+                        on the Google Ads team. Feel free to ask me anything or reach out to me at areetaw@gmail.com!
+                    </p>
 				</div>
                 <div class="socials" style="flex-direction: row; text-align: center;">
                     <a href="http://twitter.com/areetaw" class="fa fa-twitter"></a>
