--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,42 +23,42 @@
     </head>
     <body>
         <!-- navigation bar -->
-		  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNav">
-			<div class="container">
-			  <a class="navbar-brand js-scroll-trigger" href="#header">Areeta Wong</a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			  </button>
-			  <div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-				  <li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#about">about me</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#projects">projects</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
-				  </li>
-				</ul>
-			  </div>
-			</div>
-		  </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#header">Areeta Wong</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#about">about me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#projects">projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <!-- about me -->
-		<section id="about">
-			<div class="jumbotron text-left" style="color: #000000;">
-				<div class="mx-5 mx-xl-5">
-					<h2>about me</h2>
-					<p>
-						Hi! I'm Areeta and I'm an incoming 3rd year at <a class="link" href="https://uci.edu/">University of
-						California, Irvine</a> studying computer science with a minor in Informatics, interested in technology
-						and product management. Although born and raised in San Francisco and Foster City, my interest in tech didn't start
-						until my summer at Twitter with <a class="link" href="https://girlswhocode.com/">Girls Who Code
-						</a> in the summer of 2016; it was the first time I ever saw, wrote, and understood code. Since then,
+        <section id="about">
+            <div class="jumbotron text-left" style="color: #000000;">
+                <div class="mx-5 mx-xl-5">
+                    <h2>about me</h2>
+                    <p>
+                        Hi! I'm Areeta and I'm an incoming 3rd year at <a class="link" href="https://uci.edu/">University of
+                        California, Irvine</a> studying computer science with a minor in Informatics, interested in technology
+                        and product management. Although born and raised in San Francisco and Foster City, my interest in tech didn't start
+                        until my summer at Twitter with <a class="link" href="https://girlswhocode.com/">Girls Who Code
+                        </a> in the summer of 2016; it was the first time I ever saw, wrote, and understood code. Since then,
                         I've been jumping on opportunities to pay it forward and help computer science education be
                         more accessible to students through organizing hackathons, hosting workshops, and leading organizations.
-					</p>
+                    </p>
                     <p>
                         Outside of CS, one of my favorite things to do is eat! From sashimi from the Japan's famous Tsukiji fish market to 
                         Southern California's homemade Omomo boba, my taste buds want to experience it all. Since I can remember, I have
@@ -70,29 +70,66 @@
                         Currently, I'm a Student Training in Engineering Program (STEP) Intern, formerly known as Engineering Practicum, at Google working
                         on the Google Ads team. Feel free to ask me anything or reach out to me at areetaw@gmail.com!
                     </p>
-				</div>
-                <div class="socials" style="flex-direction: row; text-align: center;">
-                    <a href="http://twitter.com/areetaw" class="fa fa-twitter"></a>
-                    <a href="https://github.com/areetaw" class="fa fa-github"></a>
-                    <a href="https://www.linkedin.com/in/areetaw" class="fa fa-linkedin"></a>
+                    </div>
+                    <div class="socials" style="flex-direction: row; text-align: center;">
+                        <a href="http://twitter.com/areetaw" class="fa fa-twitter"></a>
+                        <a href="https://github.com/areetaw" class="fa fa-github"></a>
+                        <a href="https://www.linkedin.com/in/areetaw" class="fa fa-linkedin"></a>
+                    </div>
                 </div>
-			</div>
-		</section>
+            </div>
+        </section>
 
         <!-- projects -->
-		<section id="projects" style="background-color: #898CAE; color: #FFFFFF;"
-			<div class="jumbotron text-left" >
-				<div class="mx-5 mx-xl-5">
-					<h2>projects</h2>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                        culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-				</div>
-			</div>
+        <section id="projects">
+            <div class="jumbotron text-left" style="background-color: #898CAE; color: #FFFFFF;">
+                <div class="mx-5 mx-xl-5">
+                <h2>projects</h2>
+
+                <!-- first row: search engine, ics web crawler, areetawong.com -->
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">search engine</h5>
+                                    <span class="badge badge-pill badge-light">python</span>
+                                    <span class="badge badge-pill badge-secondary">flask</span>
+                                    <p class="card-text">a search engine built from the ground up that is capable of handling tens of 
+                                    thousands of documents, under harsh operational constriants and having a query response time under 300ms</p>
+                                    <a href="https://github.com/areetaw/search-engine" class="btn btn-primary">github repo</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">ics web crawler</h5>
+                                    <span class="badge badge-pill badge-light">python</span>
+                                    <p class="card-text">a web crawler that runs through every valid domain under the uc irvine computer science department
+                                    while maintaining politeness rules  to avoid overloading sites with requests
+                                    </p>
+                                    <a href="https://github.com/areetaw/ics-web-crawler" class="btn btn-primary">github repo</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">personal website</h5>
+                                    <span class="badge badge-pill badge-secondary">html</span>
+                                    <span class="badge badge-pill badge-dark">css</span>
+                                    <span class="badge badge-pill badge-warning">adobe xd</span>
+                                    <p class="card-text">a personal website to showcase social media and act as my little corner on the internet;
+                                        will be adding to it after this summer ends
+                                    </p>
+                                    <a href="https://github.com/areetaw/areetaw.github.io" class="btn btn-primary">github repo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
 
         <!-- images -->
@@ -114,5 +151,6 @@
 				</div>
 			</div>
         </section>
+
     </body>
 </html>
