--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -94,8 +94,9 @@
                                     <h5 class="card-title">search engine</h5>
                                     <span class="badge badge-pill badge-light">python</span>
                                     <span class="badge badge-pill badge-secondary">flask</span>
-                                    <p class="card-text">a search engine built from the ground up that is capable of handling tens of 
-                                    thousands of documents, under harsh operational constriants and having a query response time under 300ms</p>
+                                    <p class="card-text">a search engine built from scratch that is capable of handling 10,000+
+                                    of documents with a query response time under 300ms</p>
+                                    <h6 class="card-subtitle mb-2 text-muted">built at cs 121 spring 2020</h6>
                                     <a href="https://github.com/areetaw/search-engine" class="btn btn-primary">github repo</a>
                                 </div>
                             </div>
@@ -105,9 +106,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title">ics web crawler</h5>
                                     <span class="badge badge-pill badge-light">python</span>
-                                    <p class="card-text">a web crawler that runs through every valid domain under the uc irvine computer science department
-                                    while maintaining politeness rules  to avoid overloading sites with requests
+                                    <p class="card-text">a web crawler that runs through valid domains under the uci cs department
+                                        while maintaining politeness rules to avoid overloading sites with requests
                                     </p>
+                                    <h6 class="card-subtitle mb-2 text-muted">built at cs 121 spring 2020</h6>
                                     <a href="https://github.com/areetaw/ics-web-crawler" class="btn btn-primary">github repo</a>
                                 </div>
                             </div>
@@ -122,12 +124,65 @@
                                     <p class="card-text">a personal website to showcase social media and act as my little corner on the internet;
                                         will be adding to it after this summer ends
                                     </p>
+                                    <h6 class="card-subtitle mb-2 text-muted">updated may 2020</h6>
                                     <a href="https://github.com/areetaw/areetaw.github.io" class="btn btn-primary">github repo</a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
+                    <!-- second row: reddit android app, dream destination, and maps vr -->
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">reddit</h5>
+                                    <span class="badge badge-pill badge-success">android studio</span>
+                                    <span class="badge badge-pill badge-primary">java</span>
+                                    <span class="badge badge-pill badge-warning">firebase</span>
+                                    <p class="card-text">a mobile app that mocks the popular site <a class="link" href="https://reddit.com/">reddit</a> 
+                                        with a thread where user can add, search, and delete messeges or sub-messages through database
+                                    </p>
+                                    <h6 class="card-subtitle mb-2 text-muted">built at ics 45j fall 2019</h6>
+                                    <a href="https://github.com/areetaw/ics-45j/tree/master/Lab5" class="btn btn-primary">github repo</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">dream destination</h5>
+                                    <span class="badge badge-pill badge-light">python</span>
+                                    <span class="badge badge-danger">jinja</span>
+                                    <span class="badge badge-pill badge-secondary">html</span>
+                                    <span class="badge badge-pill badge-dark">css</span>
+                                    <span class="badge badge-info">yelp api</span>
+                                    <p class="card-text">a travel web app where users submit a form and get matched 
+                                        with a dream vacation spot along with food/lodging/activities recommendations 
+                                    </p>
+                                    <h6 class="card-subtitle mb-2 text-muted">built at cssi mtv 2018</h6>
+                                    <a href="https://github.com/areetaw/dream-destination" class="btn btn-primary">github repo</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">maps vr</h5>
+                                    <span class="badge badge-pill badge-secondary">html</span>
+                                    <span class="badge badge-pill badge-dark">css</span>
+                                    <span class="badge badge-pill badge-primary">javascript</span>
+                                    <span class="badge badge-danger">a-frame</span>
+
+                                    <p class="card-text">a web application dedicated to help people with physical disabilities navigate the inside of a building
+                                        through an immersive virtual reality experience
+                                    </p>
+                                    <h6 class="card-subtitle mb-2 text-muted"> built at kode with klossy lvl 2 2018</h6>
+                                    <a href="https://github.com/areetaw/maps-vr" class="btn btn-primary">github repo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
