fix badges into pill style

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -153,10 +153,10 @@
                                 <div class="card-body">
                                     <h5 class="card-title">dream destination</h5>
                                     <span class="badge badge-pill badge-light">python</span>
-                                    <span class="badge badge-danger">jinja</span>
+                                    <span class="badge badge-pill badge-danger">jinja</span>
                                     <span class="badge badge-pill badge-secondary">html</span>
                                     <span class="badge badge-pill badge-dark">css</span>
-                                    <span class="badge badge-info">yelp api</span>
+                                    <span class="badge badge-pill badge-info">yelp api</span>
                                     <p class="card-text">a travel web app where users submit a form and get matched 
                                         with a dream vacation spot along with food, lodging, and activities recommendations 
                                     </p>
@@ -172,7 +172,7 @@
                                     <span class="badge badge-pill badge-secondary">html</span>
                                     <span class="badge badge-pill badge-dark">css</span>
                                     <span class="badge badge-pill badge-primary">javascript</span>
-                                    <span class="badge badge-danger">a-frame</span>
+                                    <span class="badge badge-pill badge-danger">a-frame</span>
 
                                     <p class="card-text">a web app dedicated to help people with physical disabilities navigate the inside of a building
                                         through an immersive virtual reality experience
