--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -67,7 +67,9 @@
           on the Google Ads team. Feel free to ask me anything or reach out to me at areetaw@gmail.com!
         </p>
         <div class="socials" style="flex-direction: row; text-align: center;">
-          <a href="http://twitter.com/areetaw" class="fa fa-twitter"></a>
+          <a href="https://twitter.com/areetaw" class="fa fa-twitter"></a>
+          <a href="https://medium.com/@areetaw" class="fa fa-medium"></a>
+          <a href="mailto:areetaw@gmail.com" class="fa fa-envelope"></a>
           <a href="https://github.com/areetaw" class="fa fa-github"></a>
           <a href="https://www.linkedin.com/in/areetaw" class="fa fa-linkedin"></a>
         </div>
@@ -83,7 +85,7 @@
       
       <!-- first row: search engine, ics web crawler, areetawong.com -->
       <div class="row">
-        <div class="col-xl-4">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">search engine</h5>
@@ -97,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">ics web crawler</h5>
@@ -110,7 +112,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">personal website</h5>
@@ -129,7 +131,7 @@
 
       <!-- second row: reddit android app, dream destination, and maps vr -->
       <div class="row">
-        <div class="col-xl-4">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">reddit</h5>
@@ -144,7 +146,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">dream destination</h5>
@@ -161,7 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">maps vr</h5>
