--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="mainNav">
+    <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light bg-light" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#header">Areeta Wong</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,10 @@
     <section id="about">
       <div class="jumbotron text-left" style="color: #000000;">
         <div class="mx-5 mx-xl-5">
-          <h2>about me</h2>
+          <div class="row" style="margin-left: 0px">
+            <div class="icons8-female-user"></div>
+            <h2>about me</h2>
+          </div>
           <p>Hi! I'm Areeta and I'm an incoming 3rd year at <a class="link" href="https://uci.edu/">University of
             California, Irvine</a> studying computer science with a minor in Informatics, interested in technology
             and product management. Although born and raised in San Francisco and Foster City, my interest in tech didn't start
@@ -81,7 +84,10 @@
     <section id="projects">
       <div class="jumbotron text-left" style="background-color: #898CAE; color: #FFFFFF;">
         <div class="mx-5 mx-xl-5">
-        <h2>projects</h2>
+          <div class="row" style="margin-left: 0px">
+            <div class="icons8-idea"></div>            
+            <h2>projects</h2>
+          </div>
         
         <!-- first row: search engine, ics web crawler, areetawong.com -->
         <div class="row">
