create folder for svg and include svg as img instead of css

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -49,7 +49,7 @@
       <div class="jumbotron text-left" style="color: #000000;">
         <div class="mx-5 mx-xl-5">
           <div class="row" style="margin-left: 0px">
-            <div class="icons8-female-user"></div>
+            <img class="icons" src="images/svg/icons8-female-user.svg">           
             <h2>about me</h2>
           </div>
           <p>Hi! I'm Areeta and I'm an incoming 3rd year at <a class="link" href="https://uci.edu/">University of
@@ -85,7 +85,7 @@
       <div class="jumbotron text-left" style="background-color: #898CAE; color: #FFFFFF;">
         <div class="mx-5 mx-xl-5">
           <div class="row" style="margin-left: 0px">
-            <div class="icons8-idea"></div>            
+            <img class="icons" src="images/svg/icons8-idea.svg">           
             <h2>projects</h2>
           </div>
         
