add journey and skills section along with more icons

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -189,6 +189,18 @@
       </div>
     </section>
 
+    <!-- skills -->
+    <section id="timeline">
+      <div class="jumbotron text-left">
+        <div class="mx-5 mx-xl-5">
+          <div class="row" style="margin-left: 0px">
+            <img class="icons" src="images/svg/icons8-toolbox.svg">           
+            <h2>skills</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- images -->
     <section id="images">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -271,11 +283,25 @@
     </div>
     </section>
 
+    <!-- journey -->
+    <section id="journy">
+      <div class="jumbotron text-left" style="background-color: #898CAE; color: #FFFFFF;">
+        <div class="mx-5 mx-xl-5">
+          <div class="row" style="margin-left: 0px">
+            <img class="icons" src="images/svg/icons8-search.svg">           
+            <h2>journey</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- hobbies -->
     <section id="hobbies">
       <div class="jumbotron text-left" style="color: #000000;">
         <div class="mx-5 mx-xl-5">
-          <h2>hobbies</h2>
+          <div class="row" style="margin-left: 0px">
+            <img class="icons" src="images/svg/icons8-plus.svg">           
+            <h2>hobbies + interests</h2>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
