add skills section and hobbies + interest icon

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -197,6 +197,10 @@
             <img class="icons" src="images/svg/icons8-toolbox.svg">           
             <h2>skills</h2>
           </div>
+          <p><b>programming:</b> python, java, html, css, git, c++, and sql</p>
+          <p><b>tools:</b> google drive, microsoft office, and canva</p>
+          <p><b>other:</b> leadership, organization, sponsorship, community outreach, public speaking, and teaching</p>
+          <p><b>currently dabbling with:</b> react, javascript, and figma</p>
         </div>
       </div>
     </section>
@@ -284,7 +288,7 @@
     </section>
 
     <!-- journey -->
-    <section id="journy">
+    <section id="journey">
       <div class="jumbotron text-left" style="background-color: #898CAE; color: #FFFFFF;">
         <div class="mx-5 mx-xl-5">
           <div class="row" style="margin-left: 0px">
@@ -302,6 +306,7 @@
           <div class="row" style="margin-left: 0px">
             <img class="icons" src="images/svg/icons8-plus.svg">           
             <h2>hobbies + interests</h2>
+          </div>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
