add icon to tab and edit text on project descriptions

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,7 +18,9 @@
         
       <!-- icon library -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      
       <title>Areeta Wong</title>
+      <link rel="icon" href="images/svg/icons8-female-user.svg">
   </head>
   <body>
     <!-- navigation bar -->
@@ -98,7 +100,7 @@
                 <span class="badge badge-pill badge-light">python</span>
                 <span class="badge badge-pill badge-secondary">flask</span>
                 <p class="card-text">a search engine built from scratch that is capable of handling 10,000+
-                of documents with a query response time under 300ms
+                  of documents with a query response time under 300ms
                 </p>
                 <h6 class="card-subtitle mb-2 text-muted">built at cs 121 spring 2020</h6>
                 <a href="https://github.com/areetaw/search-engine" class="btn btn-primary">github repo</a>
@@ -110,8 +112,8 @@
               <div class="card-body">
                 <h5 class="card-title">ics web crawler</h5>
                 <span class="badge badge-pill badge-light">python</span>
-                <p class="card-text">a web crawler that runs through domains under the uci cs department
-                while maintaining politeness rules and checking if it is valid
+                <p class="card-text">a web crawler that runs through uci cs department domains while maintaining
+                  politeness rules and checking if it is valid
                 </p>
                 <h6 class="card-subtitle mb-2 text-muted">built at cs 121 spring 2020</h6>
                 <a href="https://github.com/areetaw/ics-web-crawler" class="btn btn-primary">github repo</a>
@@ -126,7 +128,7 @@
                 <span class="badge badge-pill badge-dark">css</span>
                 <span class="badge badge-pill badge-warning">adobe xd</span>
                 <p class="card-text">a personal website to showcase social media and act as my corner on the internet;
-                will be adding to it after this summer ends
+                  will be adding to it after this summer ends
                 </p>
                 <h6 class="card-subtitle mb-2 text-muted">updated may 2020</h6>
                 <a href="https://github.com/areetaw/areetaw.github.io" class="btn btn-primary">github repo</a>
@@ -145,7 +147,7 @@
                 <span class="badge badge-pill badge-primary">java</span>
                 <span class="badge badge-pill badge-warning">firebase</span>
                 <p class="card-text">a mobile app that mocks <a class="link" href="https://reddit.com/">reddit</a> 
-                with a thread where user can add, search, and delete messeges or sub-messages through a database
+                  with a thread where user can add, search, and delete messeges or sub-messages through a database
                 </p>
                 <h6 class="card-subtitle mb-2 text-muted">built at ics 45j fall 2019</h6>
                 <a href="https://github.com/areetaw/ics-45j/tree/master/Lab5" class="btn btn-primary">github repo</a>
@@ -162,7 +164,7 @@
                 <span class="badge badge-pill badge-dark">css</span>
                 <span class="badge badge-pill badge-info">yelp api</span>
                 <p class="card-text">a travel web app where users submit a form and get matched 
-                with a dream vacation spot along with food, lodging, and activities recommendations 
+                  with a vacation spot along with food, lodging, and activities reccs
                 </p>
                 <h6 class="card-subtitle mb-2 text-muted">built at cssi mtv 2018</h6>
                 <a href="https://github.com/areetaw/dream-destination" class="btn btn-primary">github repo</a>
@@ -177,8 +179,8 @@
                 <span class="badge badge-pill badge-dark">css</span>
                 <span class="badge badge-pill badge-primary">javascript</span>
                 <span class="badge badge-pill badge-danger">a-frame</span>
-                <p class="card-text">a web app dedicated to help people with physical disabilities navigate the inside of a building
-                through an immersive virtual reality experience
+                <p class="card-text">a web app dedicated to help people with physical disabilities navigate the inside
+                  of a building through a virtual reality experience
                 </p>
                 <h6 class="card-subtitle mb-2 text-muted"> built at kode with klossy lvl 2 2018</h6>
                 <a href="https://github.com/areetaw/maps-vr" class="btn btn-primary">github repo</a>
