--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -25,24 +25,22 @@
   <body>
     <!-- navigation bar -->
     <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light bg-light" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#header">Areeta Wong</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">about me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">projects</a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
-            </li>
-          </ul>
-        </div>
+      <a class="navbar-brand js-scroll-trigger" href="#header">Areeta Wong</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">about me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">projects</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
+          </li>
+        </ul>
       </div>
     </nav>
 
@@ -218,6 +216,7 @@
           <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="6"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="7"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -291,11 +290,37 @@
 
     <!-- journey -->
     <section id="journey">
-      <div class="jumbotron text-left" style="background-color: #898CAE; color: #FFFFFF;">
+      <div class="jumbotron text-left" style="background-color: #898CAE; color: #000000;">
         <div class="mx-5 mx-xl-5">
           <div class="row" style="margin-left: 0px">
             <img class="icons" src="images/svg/icons8-search.svg">           
-            <h2>journey</h2>
+            <h2 style="color: #FFFFFF">journey</h2>
+          </div>
+          <div class="timeline">
+            <div class="container left">
+              <div class="content">
+                <h4>june 2020</h4>
+                <p style="margin-bottom: 0px;">second internship @ google as a step intern</p>
+              </div>
+            </div>
+            <div class="container right">
+              <div class="content">
+                <h4>june 2019</h4>
+                <p style="margin-bottom: 0px;">first internship @ amazon as an amzon future engineer sde intern</p>
+              </div>
+            </div>
+            <div class="container left">
+              <div class="content">
+                <h4>july 2018</h4>
+                <p style="margin-bottom: 0px;">first time at google @ cssi summer program</p>
+              </div>
+            </div>
+            <div class="container right">
+              <div class="content">
+                <h4>june 2016</h4>
+                <p style="margin-bottom: 0px;">first time coding @ girls who code summer immersion program</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
