add hobbies + interest with image cards

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -124,7 +124,7 @@
                 <div class="card-body">
                   <h5 class="card-title">ics web crawler</h5>
                   <span class="badge badge-pill badge-light">python</span>
-                  <p class="card-text">a web crawler that runs through uci cs department domains while maintaining
+                  <p class="card-text">a web crawler that runs through the uci cs department domains while maintaining
                     politeness rules and checking if it is valid
                   </p>
                   <h6 class="card-subtitle mb-2 text-muted">built at cs 121 spring 2020</h6>
@@ -139,8 +139,8 @@
                   <span class="badge badge-pill badge-secondary">html</span>
                   <span class="badge badge-pill badge-dark">css</span>
                   <span class="badge badge-pill badge-warning">adobe xd</span>
-                  <p class="card-text">a personal website to showcase social media and act as my corner on the internet;
-                    will be adding to it after this summer ends
+                  <p class="card-text">a personal website to showcase myself and act as my corner on the internet; will be
+                    adding more to it after the summer ends
                   </p>
                   <h6 class="card-subtitle mb-2 text-muted">updated may 2020</h6>
                   <a href="https://github.com/areetaw/areetaw.github.io" class="btn btn-primary">github repo</a>
@@ -159,7 +159,7 @@
                   <span class="badge badge-pill badge-primary">java</span>
                   <span class="badge badge-pill badge-warning">firebase</span>
                   <p class="card-text">a mobile app that mocks <a class="link" href="https://reddit.com/">reddit</a> 
-                    with a thread where user can add, search, and delete messeges or sub-messages through a database
+                    with a thread where user can add, search, and delete messages or sub-messages through a database
                   </p>
                   <h6 class="card-subtitle mb-2 text-muted">built at ics 45j fall 2019</h6>
                   <a href="https://github.com/areetaw/ics-45j/tree/master/Lab5" class="btn btn-primary">github repo</a>
@@ -191,7 +191,7 @@
                   <span class="badge badge-pill badge-dark">css</span>
                   <span class="badge badge-pill badge-primary">javascript</span>
                   <span class="badge badge-pill badge-danger">a-frame</span>
-                  <p class="card-text">a web app dedicated to help people with physical disabilities navigate the inside
+                  <p class="card-text">a web app dedicated to helping people with physical disabilities navigate the insides
                     of a building through a virtual reality experience
                   </p>
                   <h6 class="card-subtitle mb-2 text-muted"> built at kode with klossy lvl 2 2018</h6>
@@ -348,16 +348,36 @@
               <img class="icons" src="images/svg/icons8-plus.svg">           
               <h2>hobbies + interests</h2>
             </div>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            <div class="card-deck">
+              <div class="card">
+                <img src="images/youtube.png" class="card-img-top" alt="pic of la trip video on youtube">
+                <div class="card-body">
+                  <h5 class="card-title">vlogging/photography</h5>
+                  <p class="card-text">i love capturing memories and looking back on them</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/taiwan.jpg" class="card-img-top" alt="pic of taiwan shi fen">
+                <div class="card-body">
+                  <h5 class="card-title">traveling</h5>
+                  <p class="card-text">i love going on adventures with family and friends</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/sushi.jpg" class="card-img-top" alt="pic of sushi boat">
+                <div class="card-body">
+                  <h5 class="card-title">eating</h5>
+                  <p class="card-text">i love eating foods from a variety of cultures</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+      <div class="footer" style="text-align: center; margin: 2rem;">
+        <p>created with ♡ by areeta wong</p>
+        <p>© copyright 2020</p>
+      </div>
     </div>
 
     <!-- bootstrap js -->
