use fetch on portfolio to add comment section

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -50,6 +50,9 @@
               <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
               </li>
+              <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="#comments">comments</a>
+              </li>
             </ul>
           </div>
         </nav>
@@ -374,6 +377,25 @@
           </div>
         </div>
       </section>
+
+      <!-- comments -->
+      <section id="comments">
+        <div class="jumbotron text-left" style="color: #000000;">
+          <div class="mx-5 mx-xl-5">
+            <div class="row" style="margin-left: 0px">
+              <img class="icons" src="images/svg/icons8-edit.svg">           
+              <h2>comments</h2>
+            </div>
+            <div id="content">
+              <p>Click here to see a random quote:</p>
+              <button onclick="getRandomQuote()">Fetch a quote!</button>
+              <div id="quote-container"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- footer -->
       <div class="footer" style="text-align: center; margin: 2rem;">
         <p>created with ♡ by areeta wong</p>
         <p>© copyright 2020</p>
