add gson dependencies and return comments data

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -387,8 +387,7 @@
               <h2>comments</h2>
             </div>
             <div id="content">
-              <p>Click here to see a random quote:</p>
-              <button onclick="getRandomQuote()">Fetch a quote!</button>
+              <button onclick="getComments()">Fetch a quote!</button>
               <div id="quote-container"></div>
             </div>
           </div>
