change photos for hobbies with same sizing and convert comments to messages

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -51,7 +51,7 @@
                   <a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#comments">comments</a>
+                  <a class="nav-link js-scroll-trigger" href="#contact me">contact me</a>
               </li>
             </ul>
           </div>
@@ -353,14 +353,14 @@
             </div>
             <div class="card-deck">
               <div class="card">
-                <img src="images/youtube.png" class="card-img-top" alt="pic of la trip video on youtube">
+                <img src="images/youtube.jpg" class="card-img-top" alt="pic of la trip video on youtube">
                 <div class="card-body">
-                  <h5 class="card-title">vlogging/photography</h5>
+                  <h5 class="card-title">vlogging</h5>
                   <p class="card-text">i love capturing memories and looking back on them</p>
                 </div>
               </div>
               <div class="card">
-                <img src="images/taiwan.jpg" class="card-img-top" alt="pic of taiwan shi fen">
+                <img src="images/taiwan.jpg" class="card-img-top" alt="pic of taiwan shifen">
                 <div class="card-body">
                   <h5 class="card-title">traveling</h5>
                   <p class="card-text">i love going on adventures with family and friends</p>
@@ -378,17 +378,17 @@
         </div>
       </section>
 
-      <!-- comments -->
-      <section id="comments">
-        <div class="jumbotron text-left" style="color: #000000;">
+      <!-- contact me -->
+      <section id="contact me">
+        <div class="jumbotron text-left" style="background-color: #898CAE; color: #ffffff;">
           <div class="mx-5 mx-xl-5">
             <div class="row" style="margin-left: 0px">
               <img class="icons" src="images/svg/icons8-edit.svg">           
-              <h2>comments</h2>
+              <h2>contact me</h2>
             </div>
             <div id="content">
-              <button onclick="getComments()">Fetch a quote!</button>
-              <div id="quote-container"></div>
+              <button onclick="getMessages()">message!</button>
+              <div id="message-container"></div>
             </div>
           </div>
         </div>
