remove me from contact me

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -51,7 +51,7 @@
                   <a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#contact me">contact me</a>
+                  <a class="nav-link js-scroll-trigger" href="#contact">contact me</a>
               </li>
             </ul>
           </div>
@@ -379,7 +379,7 @@
       </section>
 
       <!-- contact me -->
-      <section id="contact me">
+      <section id="contact">
         <div class="jumbotron text-left" style="background-color: #898CAE; color: #ffffff;">
           <div class="mx-5 mx-xl-5">
             <div class="row" style="margin-left: 0px">
