--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -407,7 +407,7 @@
               </div>
               <button class="btn btn-primary" type="submit">submit form</button>
             </form>
-            <ul id="posts-list"></ul>
+            <div id="posts"></div>
           </div>
         </div>
       </section>
