add markers for all locations through servlet and include travels section

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,10 +13,10 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="style.css">
 
-      <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaktP7iDnWpZsVwd_tQaQ94DbDSwdKlf0&callback=initMap">
-      </script>
       <script src="script.js"></script>
+      <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaktP7iDnWpZsVwd_tQaQ94DbDSwdKlf0&callback=createMap">
+      </script>
 
       <!-- fonts -->
       <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300&display=swap" rel="stylesheet">
@@ -353,6 +353,10 @@
       <section id="travels">
         <div class="jumbotron text-left">
           <div class="mx-5 mx-xl-5">
+            <div class="row" style="margin-left: 0px">
+              <img class="icons" src="images/svg/icons8-external-link.svg">           
+              <h2>travels</h2>
+            </div>
             <div id="map"></div>
           </div>
         </div>
