add travels to nav bar and api key to examples

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -53,6 +53,9 @@
                 <a class="nav-link js-scroll-trigger" href="#journey">journey</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#travels">travels</a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#hobbies">hobbies</a>
               </li>
               <li class="nav-item">
