add sentiment analysis from given example

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -427,6 +427,7 @@
                 <label for="validationTextarea">message</label>
                 <textarea class="form-control" id="validationTextarea" name="message" placeholder="hello!" required></textarea>
               </div>
+              <div id="caution"></div>
               <button class="btn btn-primary" type="submit">submit form</button>
             </form>
             <div id="posts"></div>
