restrict email input to just emails

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -420,7 +420,7 @@
                 </div>
                 <div class="col-md-4">
                   <label for="validationDefault03">email</label>
-                  <input type="text" class="form-control" id="validationDefault03" name="email" placeholder="johndoe@gmail.com"required>
+                  <input type="email" class="form-control" id="validationDefault03" name="email" placeholder="johndoe@gmail.com"required>
                 </div>
               </div>
               <div class="mb-3">
